@@ -1,5 +1,15 @@
 2011-02-16  Tom Tromey  <tromey@redhat.com>
 
+	* dwarf2loc.c (unimplemented): Handle unnamed opcodes.
+	(compile_dwarf_to_ax) <default>: Use unimplemented.
+	<DW_OP_deref>: Update.
+	(disassemble_dwarf_expression): Update.
+	* dwarf2read.c (dwarf_stack_op_name): Remove 'def' argument.
+	(decode_locdesc): Update.
+	* dwarf2expr.h (dwarf_stack_op_name): Update.
+
+2011-02-16  Tom Tromey  <tromey@redhat.com>
+
 	* ax.h (struct aop_map) <name>: Now const.
 
 2011-02-16  Tom Tromey  <tromey@redhat.com>
